# newword-py

./: .gitignore  LICENSE  README.md  newword.gbk.conf  newword.py  newword.utf8.conf  pyproject.toml  run_newword.py
.qoder/specs/: refactor-newword-project.md
newword/: __init__.py  __main__.py  algorithm.py  cli.py  config.py  corpus.py  stats.py
tests/: conftest.py  test_algorithm.py  test_cli.py  test_config.py  test_corpus.py  test_stats.py
tests/fixtures/: golden_output.csv  sample_corpus.txt  test.conf
